[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/UI/buttons/pause_button.png" type="Texture" id=1]
[ext_resource path="res://ui_themes/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/UI/ui_panel_2.png" type="Texture" id=3]
[ext_resource path="res://scripts/buy_screen/ShopTimer.gd" type="Script" id=4]
[ext_resource path="res://scripts/tab_buttons/OrdersTab.gd" type="Script" id=5]
[ext_resource path="res://scripts/tab_buttons/BuySyrupTab.gd" type="Script" id=6]
[ext_resource path="res://scripts/tab_buttons/WarebouseTab.gd" type="Script" id=7]
[ext_resource path="res://scripts/Interface.gd" type="Script" id=8]
[ext_resource path="res://scripts/tab_buttons/StartDayTab.gd" type="Script" id=9]
[ext_resource path="res://scripts/HUD/TimerPanel.gd" type="Script" id=10]
[ext_resource path="res://scripts/tab_buttons/MarketTab.gd" type="Script" id=11]
[ext_resource path="res://scenes/gui_components/counters/DayCounter.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/gui_components/page_tabs/BuySyrupTab.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/gui_components/page_tabs/OrdersTab.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/gui_components/page_tabs/StartDayTab.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/gui_components/page_tabs/WarebouseTab.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/Game.gd" type="Script" id=17]
[ext_resource path="res://scenes/gui_components/counters/MoneyCounter.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/gui_components/page_tabs/MarketTab.tscn" type="PackedScene" id=19]

[node name="Game" type="Node2D"]
script = ExtResource( 17 )

[node name="GUI" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Interface" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 8 )

[node name="Page" type="Control" parent="GUI/Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerThird" type="Control" parent="GUI/Interface"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarehouseTab" parent="GUI/Interface/LowerThird" groups=["FocusItems_Game"] instance=ExtResource( 16 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_right = 166.0
margin_bottom = 0.0
script = ExtResource( 7 )

[node name="OrdersTab" parent="GUI/Interface/LowerThird" groups=["FocusItems_Game"] instance=ExtResource( 14 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -48.0
margin_right = 0.0
margin_bottom = 0.0
script = ExtResource( 5 )

[node name="StartDayTab" parent="GUI/Interface/LowerThird" groups=["FocusItems_Game"] instance=ExtResource( 15 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -88.0
margin_right = 88.0
margin_bottom = 0.0
script = ExtResource( 9 )

[node name="BuySyrupTab" parent="GUI/Interface/LowerThird" groups=["FocusItems_Game"] instance=ExtResource( 13 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -337.0
margin_top = -48.0
margin_right = -171.0
margin_bottom = 0.0
script = ExtResource( 6 )

[node name="MarketTab" parent="GUI/Interface/LowerThird" groups=["FocusItems_Game"] instance=ExtResource( 19 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 171.0
margin_top = -48.0
margin_right = 337.0
margin_bottom = 0.0
script = ExtResource( 11 )

[node name="TimerPanel" type="NinePatchRect" parent="GUI/Interface/LowerThird"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -75.0
margin_right = 76.0
texture = ExtResource( 3 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25
script = ExtResource( 10 )

[node name="Label" type="Label" parent="GUI/Interface/LowerThird/TimerPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -37.5
margin_bottom = 0.5
rect_scale = Vector2( 2, 2 )
text = "2:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopTimer" type="Timer" parent="GUI/Interface/LowerThird/TimerPanel"]
script = ExtResource( 4 )

[node name="UpperThird" type="HBoxContainer" parent="GUI/Interface"]
anchor_right = 1.0

[node name="PauseButton" type="TextureButton" parent="GUI/Interface/UpperThird" groups=["FocusItems_Game"]]
margin_right = 510.0
margin_bottom = 64.0
rect_min_size = Vector2( 63, 63 )
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )

[node name="Counters" type="HBoxContainer" parent="GUI/Interface/UpperThird"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 64.0
grow_horizontal = 0
size_flags_horizontal = 3
alignment = 2

[node name="DayCounter" parent="GUI/Interface/UpperThird/Counters" instance=ExtResource( 12 )]
margin_left = 226.0
margin_right = 326.0
margin_bottom = 64.0

[node name="MoneyCounter" parent="GUI/Interface/UpperThird/Counters" instance=ExtResource( 18 )]
margin_left = 330.0
margin_right = 510.0
margin_bottom = 64.0

[connection signal="pressed" from="GUI/Interface/LowerThird/WarehouseTab" to="GUI/Interface/LowerThird/WarehouseTab" method="_on_WarebouseTab_pressed"]
[connection signal="pressed" from="GUI/Interface/LowerThird/OrdersTab" to="GUI/Interface/LowerThird/OrdersTab" method="_on_OrdersTab_pressed"]
[connection signal="pressed" from="GUI/Interface/LowerThird/StartDayTab" to="GUI/Interface/LowerThird/StartDayTab" method="_on_StartDayTab_pressed"]
[connection signal="pressed" from="GUI/Interface/LowerThird/BuySyrupTab" to="GUI/Interface/LowerThird/BuySyrupTab" method="_on_BuySyrupTab_pressed"]
[connection signal="pressed" from="GUI/Interface/LowerThird/MarketTab" to="GUI/Interface/LowerThird/MarketTab" method="_on_MarketTab_pressed"]
[connection signal="timeout" from="GUI/Interface/LowerThird/TimerPanel/ShopTimer" to="GUI/Interface/LowerThird/TimerPanel/ShopTimer" method="_on_ShopTimer_timeout"]
[connection signal="pressed" from="GUI/Interface/UpperThird/PauseButton" to="GUI/Interface" method="_on_PauseButton_pressed"]
